Fixed some alignment issue in HBox instances.

--- a/gw2-sab/res/com/bouye/gw2/sab/styles/Styles.css
+++ b/gw2-sab/res/com/bouye/gw2/sab/styles/Styles.css
@@ -21,7 +21,7 @@
     -fx-spacing: 6px;
 }
 #HBox {
-    -fx-alignment: baseline-center;
+    -fx-alignment: baseline-left;
     -fx-spacing: 6px;
 }
 #TextFlow {
